--- a/package.json
+++ b/package.json
@@ -8,5 +8,9 @@
   "dependencies": {
     "express": "3.4.x",
     "jade": "*"
+  },
+  "engines": {
+    "node": "0.10.x",
+    "npm": "1.3.x"
   }
 }
