--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
     "start": "node app.js"
   },
   "dependencies": {
-    "express": "3.4.x",
-    "jade": "*"
+    "express": "~3.4.8",
+    "jade": "~1.11.0"
   },
   "engines": {
     "node": "0.12"
