--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "node app.js"
   },
   "dependencies": {
+    "body-parser": "~1.14.2",
     "express": "~4.13.3",
     "jade": "~1.11.0"
   },
